--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -120,12 +120,12 @@
          
         .container{
           .text{
-            width: 90%;
+            width: 80%;
             display: flex;
             align-items: center;
   
             h3{
-              font-size: 30px;
+              font-size: 25px;
             }
           }
         }
@@ -136,6 +136,36 @@
     
   }
   @media screen and (min-width: 769px) and (max-width: 990px) {
+    .Header-slider{
+      width: 100%;
+      height: auto;
+
+      .header-slider-chiled{
+        width: 100%;
+        height: 70vh;
+
+        img{
+          width: 100%;
+          object-fit: cover;
+        }
+         
+        .container{
+          .text{
+            width: 60%;
+            display: flex;
+            align-items: center;
+  
+            h3{
+              font-size: 25px;
+            }
+          }
+        }
+     
+      }
+
+    }
+  }
+  @media screen and (min-width: 990px) and (max-width: 1300px) {
     .Header-slider{
       width: 100%;
       height: auto;
