--- a/src/components/MainPlags/Plags.scss
+++ b/src/components/MainPlags/Plags.scss
@@ -253,7 +253,7 @@
   .Plags-container{
     width: 100%;
     display: flex;
-    height: 700px;
+    height: 470px;
     position: relative;
     overflow: hidden;
     margin: 0;
@@ -265,17 +265,17 @@
 
     .Plags-text{
         width: 100%;
-        height: 200px;
+        height: 100px;
         margin: 0 auto;
         padding: 0 90px;
         text-align: center;
 
 
         h1{
-            font-size: 45px;
+            font-size: 35px;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
             color: white;
-            margin: 40px 0 20px 0;
+            margin: 20px 0 20px 0;
         }
         hr{
             width: 50px;
@@ -290,7 +290,7 @@
     .corusel {
       width: 100%;
       display: flex;
-      height: 400px;
+      height: 350px;
       position: relative;
       overflow: hidden;
       margin: 0 auto;
@@ -300,13 +300,14 @@
       gap: 10px;
       
         .corusel-left {
-          width: 75%;
+          width: 80%;
           position: relative;
       
           .current-image {
             width: 100%;
-            height: 400px;
+            height: 100%;
             object-fit: cover;
+            
           }
       
           .carousel-button {
@@ -336,7 +337,7 @@
       
         .corusel-right {
           width: 20%;
-          height: 600px;
+          height: 350px;
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -374,4 +375,260 @@
       }
       
 }
+}
+@media screen and (min-width: 769px) and (max-width: 990px) {
+  .Plags-container{
+    width: 100%;
+    display: flex;
+    height: 470px;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    margin-top: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    // gap: 10px;
+
+
+    .Plags-text{
+        width: 100%;
+        height: 100px;
+        margin: 0 auto;
+        padding: 0 90px;
+        text-align: center;
+
+
+        h1{
+            font-size: 35px;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            color: white;
+            margin: 20px 0 20px 0;
+        }
+        hr{
+            width: 50px;
+            height: 5px;
+            background: red;
+            border: none;
+            margin: 0 auto;
+
+        }
+    }
+
+    .corusel {
+      width: 100%;
+      display: flex;
+      height: 350px;
+      position: relative;
+      overflow: hidden;
+      margin: 0 auto;
+    //   margin-top: 50px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding: 0 0 0 10px;
+      
+        .corusel-left {
+          width: 80%;
+          position: relative;
+      
+          .current-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            
+          }
+      
+          .carousel-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+      
+            &.prev-button {
+              left: 10px;
+            }
+      
+            &.next-button {
+              right: 10px;
+            }
+      
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      
+        .corusel-right {
+          width: 20%;
+          height: 350px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          overflow: hidden;
+          overflow-y: scroll;
+          
+      
+          .miniature-container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 10px;
+      
+            .thumbnail {
+              width: 80%;
+              height: 80px;
+              object-fit: cover;
+              overflow: hidden;
+              cursor: pointer;
+              opacity: 0.7;
+              transition: transform 0.3s, opacity 0.3s;
+      
+              &.active-thumbnail {
+                opacity: 1;
+                transform: scale(1.1);
+              }
+      
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+        }
+      }
+      
+}
+}
+@media screen and (min-width: 990px) and (max-width: 1300px) {
+  .Plags-container{
+    width: 100%;
+    display: flex;
+    height: 620px;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    margin-top: 150px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    // gap: 10px;
+
+
+    .Plags-text{
+        width: 100%;
+        height: 100px;
+        margin: 0 auto;
+        padding: 0 90px;
+        text-align: center;
+
+
+        h1{
+            font-size: 35px;
+            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+            color: white;
+            margin: 20px 0 20px 0;
+        }
+        hr{
+            width: 50px;
+            height: 5px;
+            background: red;
+            border: none;
+            margin: 0 auto;
+
+        }
+    }
+
+    .corusel {
+      width: 100%;
+      display: flex;
+      height: 500px;
+      position: relative;
+      overflow: hidden;
+      margin: 0 auto;
+    //   margin-top: 50px;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding: 0 0 0 10px;
+      
+        .corusel-left {
+          width: 80%;
+          position: relative;
+      
+          .current-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            
+          }
+      
+          .carousel-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+            transition: opacity 0.3s;
+      
+            &.prev-button {
+              left: 10px;
+            }
+      
+            &.next-button {
+              right: 10px;
+            }
+      
+            &:hover {
+              opacity: 1;
+            }
+          }
+        }
+      
+        .corusel-right {
+          width: 20%;
+          height: 550px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          overflow: hidden;
+          overflow-y: scroll;
+          
+      
+          .miniature-container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 10px;
+      
+            .thumbnail {
+              width: 80%;
+              height: 80px;
+              object-fit: cover;
+              overflow: hidden;
+              cursor: pointer;
+              opacity: 0.7;
+              transition: transform 0.3s, opacity 0.3s;
+      
+              &.active-thumbnail {
+                opacity: 1;
+                transform: scale(1.1);
+              }
+      
+              &:hover {
+                opacity: 1;
+              }
+            }
+          }
+        }
+      }
+      
+} 
 }
